# RADesktop

./: .gitignore  .gitmodules
src/managed/: Directory.Build.props  RADesktop.slnx
src/managed/RADesktop.Common/: Class1.cs
src/managed/RADesktop.Ipc/: Class1.cs
src/managed/RADesktop.Native/: Class1.cs  NativeMethods.cs
src/managed/RADesktop.Overlay/: Form1.Designer.cs  Form1.cs  Program.cs
src/managed/RADesktop.Service/: Program.cs  RADesktop.Service.csproj  Worker.cs
src/managed/RADesktop.Service/Properties/: launchSettings.json
src/managed/RADesktop.Tray/: Form1.Designer.cs  Form1.cs  Program.cs  RADesktop.Tray.csproj
src/native/RADesktop.NativeCore/: CMakeLists.txt  CMakePresets.json
src/native/RADesktop.NativeCore/include/: radesktop_native.h
src/native/RADesktop.NativeCore/src/: radesktop_native.cpp
